# COSSGrader

./: pyproject.toml
coss_grader/: __init__.py  decorator.py  models.py  plugins.py
coss_grader/public/js/: editor.js  judger.js  manage.js  play.js  reports.js  watcher.js
coss_grader/routes/: api.py  home.py  quiz.py  user.py
coss_grader/templates/: layout.html  macros.html
coss_grader/templates/pages/: index.html  listing.html  login.html  register.html  results.html
coss_grader/templates/pages/quiz/: editor.html  intro.html  judger.html  manage.html  player.html  reports.html  results.html
migrations/versions/: 446959bd0dda_.py  80f62742b811_.py  e664550873ad_.py  e685182be921_.py
