[tool.poetry]
name = "coss-grader"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4.3"
mistune = "^0.8.4"
flask-migrate = "^2.5.3"
sentry_sdk = "^0.16.1"
flask-wtf = "^0.14.3"
email_validator = "^1.1.1"
psycopg2 = "^2.8.5"
flask_admin = "^1.5.6"
flask_migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
